--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -308,6 +308,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .social-link svg {
     height: 1.8rem;
+    width: 1.8rem;
     fill: #fff;
 }
 
